# 7z-experiments

./: .gitignore  README.md
7z-benchmark/: 7z-bench.c  README.md  bench_report.md
7z-fm/: CMakeLists.txt  README.md  archivereader.cpp  archivereader.h  filepanel.cpp  filepanel.h  main.cpp  mainwindow.cpp  mainwindow.h
7z-info/: 7z-info.c  README.md  fast7z.c  report-overview.txt
